@startuml

title __CARDREADER.PROVIDER.BLUETOOTH.FEITIAN's Class Diagram__\n

  package de.gematik.ti.cardreader.provider.bluetooth.feitian {
    class BuildConfig {
    }
  }
  

  package de.gematik.ti.cardreader.provider.bluetooth.feitian {
    class BuildConfig {
    }
  }
  

  package de.gematik.ti.cardreader.provider.bluetooth.feitian {
    package de.gematik.ti.cardreader.provider.bluetooth.feitian.control {
      class CardStatusHandler {
      }
    }
  }
  

  package de.gematik.ti.cardreader.provider.bluetooth.feitian {
    class ExampleInstrumentedTest {
    }
  }
  

  package de.gematik.ti.cardreader.provider.bluetooth.feitian {
    package de.gematik.ti.cardreader.provider.bluetooth.feitian.control {
      class FeitianBluetoothReceiver {
      }
    }
  }
  

  package de.gematik.ti.cardreader.provider.bluetooth.feitian {
    package de.gematik.ti.cardreader.provider.bluetooth.feitian.entities {
      class FeitianCard {
      }
    }
  }
  

  package de.gematik.ti.cardreader.provider.bluetooth.feitian {
    package de.gematik.ti.cardreader.provider.bluetooth.feitian.entities {
      class FeitianCardChannel {
      }
    }
  }
  

  package de.gematik.ti.cardreader.provider.bluetooth.feitian {
    package de.gematik.ti.cardreader.provider.bluetooth.feitian.entities {
      class FeitianCardReader {
      }
    }
  }
  

  package de.gematik.ti.cardreader.provider.bluetooth.feitian {
    package de.gematik.ti.cardreader.provider.bluetooth.feitian.control {
      class FeitianCardReaderController {
      }
    }
  }
  

  package de.gematik.ti.cardreader.provider.bluetooth.feitian {
    package de.gematik.ti.cardreader.provider.bluetooth.feitian.control {
      class FeitianCardReaderProvider {
      }
    }
  }
  

  package de.gematik.ti.cardreader.provider.bluetooth.feitian {
    package de.gematik.ti.cardreader.provider.bluetooth.feitian.control {
      class FeitianConnector {
      }
    }
  }
  

  CardStatusHandler -up-|> Handler
  CardStatusHandler o-- CardEventTransmitter : cardEventTransmitter
  FeitianBluetoothReceiver -up-|> BroadcastReceiver
  FeitianCard o-- FeitianCardChannel : basicChannel
  FeitianCardChannel o-- FeitianCard : feitianCard
  FeitianCardReader -up-|> ICardReader
  FeitianCardReader o-- FeitianCard : feitianCard
  FeitianCardReader o-- FeitianConnector : connector
  FeitianCardReader o-- CardStatusHandler : cardStatusHandler
  FeitianCardReaderController o-- FeitianBluetoothReceiver : feitianBluetoothReceiver
  FeitianCardReaderProvider -up-|> ICardReaderControllerProvider
  FeitianConnector o-- FeitianCard : feitianCard


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
